--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/work.ico" rel="icon">
 
-  <title>Home is not a home without a home</title>  
+  <title>Home is home</title>  
 
 <link href="style.css" rel="stylesheet"></head>
 
